fixed CSS bugs for wireframe dark mode & forms

--- a/theme/demos/wireframe/components/form-button/form-button.css
+++ b/theme/demos/wireframe/components/form-button/form-button.css
@@ -4,8 +4,8 @@
     @apply hover:border-accent-darker hover:bg-accent-darker hover:no-underline;
     @apply focus:border-background focus:bg-accent-darker focus:outline-none focus:ring-2 focus:ring-focus focus:ring-offset-background;
 
-    @apply dark:text-link;
-    @apply dark:hover:text-foreground;
-    @apply dark:focus:text-foreground;
+    @apply dark:text-foreground dark:bg-accent;
+    @apply dark:hover:text-foreground dark:hover:bg-accent-darker;
+    @apply dark:focus:text-foreground dark:focus:bg-accent-darker;
   }
 }
